Ajout du lien vers le release